# Informatica_II_Desaf_II

./: README.md
Codigo/TerMax/: CMakeLists.txt  archivo.cpp  archivo.h  combustible.cpp  combustible.h  constantes.cpp  constantes.h  estacionservicio.cpp  estacionservicio.h  isla.cpp  isla.h  main.cpp  region.cpp  region.h  surtidor.cpp  surtidor.h  tanque.cpp  tanque.h  termaxgestionestacion.cpp  termaxgestionestacion.h  venta.cpp  venta.h
Codigo/TerMax_Codigos_Oscar-Lopez/: Sistema-Combustible_Implementacion-1-1.cpp  Sistema-Combustible_Implementacion-1.cpp
Codigo/TexMax_Luis_Oscar/: CMakeLists.txt  archivo.cpp  archivo.h  combustible.cpp  combustible.h  estacionservicio.cpp  estacionservicio.h  main.cpp  rednacional.cpp  rednacional.h  surtidor.cpp  surtidor.h  transaccion.cpp  transaccion.h  utils.cpp  utils.h
Documentacion/: desafio_II.docx  ~$safio_II.docx
